# task_7_bulk

./: CMakeLists.txt  cmd_processor.h  main.cpp
.github/workflows/: Release.yml
